# fiis-crawler

./: .env.dev  .env.docker  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  scrapy.cfg
fiis_crawler/: middlewares.py  settings.py
fiis_crawler/extensions/: s3_logger.py
fiis_crawler/spiders/: documentos.py
fiis_scraper/: settings.py  utils.py
fiis_scraper/aws/: utils.py
fiis_scraper/documentos/: __main__.py  crawl.py
minio/: Dockerfile  entrypoint.sh
tests/: test_fiis_documents.py  test_utils.py
