[tool.poetry]
name = "fiis-crawler"
version = "0.1.0"
description = ""
authors = ["Giancarlo Lester <gatobugado.dev@gmail.com>"]
readme = "README.md"
packages = [{include = "fiis_crawler"}]

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.9.0"
python-decouple = "^3.8"
boto3 = "^1.26.142"
botocore = "^1.29.142"
types-requests = "^2.31.0.1"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.270"
mypy = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
extend-exclude = ['.venv', '.ruff_cache', '.mypy_cache', '.vscode']
ignore = []
line-length = 100
select = ['E', 'F', 'W']


[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
    | .venv
    | .vscode
    | .ruff_cache
    | .mypy_cache
)
'''

[tool.mypy]
ignore_missing_imports=true