[tool.poetry]
name = "fiis-scraper"
version = "0.1.0"
description = ""
authors = ["Giancarlo Lester <gatobugado.dev@gmail.com>"]
readme = "README.md"
# packages = [{include = "fiis_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
boto3 = "^1.26.165"
types-requests = "^2.31.0.1"
pydantic-settings = "^2.0.0"
mypy-boto3-s3 = "^1.26.163"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
ruff = "^0.0.275"
mypy = "^1.4.1"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
coverage = "^7.2.7"
pytest-mock = "^3.11.1"
requests-mock = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-exclude = ['.venv', '.ruff_cache', '.mypy_cache', '.vscode']
ignore = []
line-length = 100
select = ['E', 'F', 'W']

[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
# A regex preceded with ^/ will apply only to files and directories
# in the root of the project.
(
    | .venv
    | .vscode
    | .ruff_cache
    | .mypy_cache
)
'''

[tool.mypy]
plugins = [
  "pydantic.mypy"
]
ignore_missing_imports=true
follow_imports = "normal"
warn_redundant_casts = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true